--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="text">under maintenance...</div>
 		<div class="img_container">
-			<img src="pepe-sleeping.png" class="peepo">
+			<img src="sleeping-peepo.gif" class="peepo">
 		</div>
 	</body>
 <html>
