--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="text">under maintenance...</div>
+		<div class="text">under maintenance...
+			<a href="/hola/" target="_blank">
+				<button>hola</button>
+			</a>
+		</div>
 		<div class="img_container">
 			<img src="sleepingPeepo.gif" class="peepo">
 		</div>
