--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="chopin" data-autoplay="false" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="https://www.radio.net/s/chopin" target="_blank">Radio Chopin on radio.net</a></noscript>
+		<div class="player-container">
+			<div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="chopin" data-autoplay="false" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="https://www.radio.net/s/chopin" target="_blank">Radio Chopin on radio.net</a></noscript>
+		</div>
 		<div class="text">under maintenance...
 			<a href="/hola/" target="_blank">
 				<button>hola</button>
